--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -132,4 +132,4 @@ jobs:
           
           docker-compose -f docker-compose-dev.yml ps
       - name: Kill containers
-        run: ./killcontainers
+        run: docker-compose -f docker-compose-dev.yml down
