--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -61,22 +61,20 @@ jobs:
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10
 
-      - name: Show containers
-        run: |
-          docker-compose -f docker-compose-dev.yml up -d
-          docker-compose -f docker-compose-dev.yml ps
-          docker-compose -f docker-compose-dev.yml logs
-          docker network ls
-      - name: Install dependencies
-        run: |
-          python -m pip install -r requirements.txt
+     # - name: Show containers
+     #   run: |
+      #    docker-compose -f docker-compose-dev.yml up -d
+      #   docker-compose -f docker-compose-dev.yml ps
+      #   docker-compose -f docker-compose-dev.yml logs
+      #    docker network ls
+     # - name: Install dependencies
+     #   run: |
+      #    python -m pip install -r requirements.txt
 
-          docker-compose -f docker-compose-dev.yml ps
+       #   docker-compose -f docker-compose-dev.yml ps
       #    docker exec -i formation-devops-training-web-1 python -m pip install -r /app/requirements.txt
 
-      
-
-      
+  
 
       - name: Run unit tests
         run: |
@@ -88,8 +86,6 @@ jobs:
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
      
-
-
 
       - name: Run integration test
         run: |
@@ -131,5 +127,4 @@ jobs:
         run: |
           
           docker-compose -f docker-compose-dev.yml ps
-      - name: Kill containers
-        run: docker-compose -f docker-compose-dev.yml down
+      
