--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -61,20 +61,17 @@ jobs:
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10
 
-     # - name: Show containers
-     #   run: |
-      #    docker-compose -f docker-compose-dev.yml up -d
-      #   docker-compose -f docker-compose-dev.yml ps
-      #   docker-compose -f docker-compose-dev.yml logs
-      #    docker network ls
-     # - name: Install dependencies
-     #   run: |
-      #    python -m pip install -r requirements.txt
+     
+      - name: Install dependencies
+        run: |
+          python -m pip install -r requirements.txt
 
-       #   docker-compose -f docker-compose-dev.yml ps
+          docker-compose -f docker-compose-dev.yml ps
       #    docker exec -i formation-devops-training-web-1 python -m pip install -r /app/requirements.txt
 
-  
+      
+
+      
 
       - name: Run unit tests
         run: |
@@ -86,6 +83,8 @@ jobs:
           docker exec -i unit_tests python3 /opt/formation-devops-training/test_main.py
 
      
+
+
 
       - name: Run integration test
         run: |
@@ -127,4 +126,5 @@ jobs:
         run: |
           
           docker-compose -f docker-compose-dev.yml ps
-      
+      - name: Kill containers
+        run: docker-compose -f docker-compose-dev.yml down
