--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -61,7 +61,12 @@ jobs:
           docker-compose -f docker-compose-dev.yml up -d
           sleep 10
 
-     
+      - name: Show containers
+        run: |
+          docker-compose -f docker-compose-dev.yml up -d
+          docker-compose -f docker-compose-dev.yml ps
+          docker-compose -f docker-compose-dev.yml logs
+          docker network ls
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
