--- a/.github/workflows/tests_CiCD.yaml
+++ b/.github/workflows/tests_CiCD.yaml
@@ -122,6 +122,7 @@ jobs:
 
       - name: Build and run Docker container        
         run: |
+          docker-compose -f docker-compose-dev.yml down
           export APP_VERSION=$(date +%Y%m%d%H%M%S)
           mkdir postgresql_data
           docker-compose -f docker-compose-dev.yml build
